<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Voices of Youth Maps</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="button_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_display_message">Login Credentials</string>
    <string name="hello_world">Hello world!</string>
	<string name="enter_email">Please enter a valid email address</string>
	<string name="enter_password">Please enter a password to log in</string>
	<string name="authenticating">Authenticating&#8230;</string>
	<string name="please_enter_valid_email_and_password">Please enter a valid email and password</string>
	<string name="default_api_url">http://buenosaires.unicef-gis.org/api/</string>
	<string name="title_activity_configure_server_url">Location activation with UNICEF-GIS</string>
	<string name="title_activity_fetch_tags">Setting up UNICEF GIS&#8230;</string>
	<string name="welcome">Please designate the digital map powered by UNICEF-GIS where reports from this app will be sent (example: rio.unicef-gis.org, nyhq.unicef-gis.org, etc.). \n\nYou\'ll only need to do this once.</string>
	<string name="example_url">mycity.unicef-gis.org</string>
	<string name="save_address">Save address</string>
	<string name="wait_configuring">Please wait while we configure UNICEF GIS</string>
	<string name="fetch_tags_not_connected">It seems you are not connected to the Internet at the moment. \n\nUNICEF GIS needs your cellphone to be connected for the initial setup process to finish. \n\nIn order to complete the setup, please connect your cellphone to the Internet and open UNICEF GIS again.</string>
	<string name="go_to_network_settings">Edit your network settings</string>
	<string name="retry">Retry</string>
	<string name="something_wrong_fetching_tags">Something went wrong while trying to configure UNICEF GIS. This may be caused by intermittent connection drops. Tap \'Retry\' if you think your connection is working normally. </string>
	<string name="no_reports">You still haven\'t created any report</string>
	<string name="new_report">CREATE REPORT</string>
	<string name="tag_your_report">Tag your report</string>
	<string name="back">Back</string>
	<string name="next">NEXT</string>
	<string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
	<string name="done">DONE</string>
	<string name="report_title">Report title&#8230;</string>
	<string name="report_picture">Report picture</string>
	<string name="save_report">Save report</string>
	<string name="report_tags">Report tags</string>
	<string name="no_tags_chosen">No tags chosen</string>
	<string name="searching_location">Searching location&#8230;</string>
	<string name="description_missing">Title required</string>
	<string name="description_missing_prompt">Please provide a title for your report.</string>
	<string name="location_missing">Wait for location retrieval</string>
	<string name="location_missing_prompt">Please wait until UNICEF GIS gets your current location.</string>
	<string name="configuration_problem">Configuration problem</string>
	<string name="configuration_problem_prompt">UNICEF GIS can\'t take pictures. This is due to some problem with your phone\'s configuration. Please contact a UNICEF GIS admin to help you troubleshoot the issue.</string>
	<string name="wait">Wait</string>
	<string name="take_picture">TAKE PICTURE</string>
	<string name="share_on_facebook">Share on Facebook</string>
	<string name="share_on_twitter">Share on Twitter</string>
	<string name="saving_report">Saving report&#8230;</string>
	<string name="action_preferences">Preferences</string>
	<string name="saving_account_details">Saving account details&#8230;</string>
	<string name="delete_uploaded">Delete uploaded reports</string>
	<string name="delete_uploaded_message">If you confirm, all reports which have already been uploaded to a UNICEF GIS website will be removed from your cellphone. You will still be able to see them at the website.</string>
	<string name="delete_uploaded_confirm">Delete reports</string>
	<string name="delete_uploaded_cancel">Cancel</string>
	<string name="deleting_reports">Deleting reports</string>
	<string name="please_wait_deleting_reports">Please wait while the app deletes uploaded reports from your phone&#8230;</string>
	<plurals name="deleted_reports">
        <item quantity="one">Successfully deleted one report</item>
        <item quantity="few">Successfully deleted %d reports</item>
        <item quantity="other">There were no reports to delete</item>
    </plurals>
</resources>
