<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/summary_picture"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="50"
        android:contentDescription="@string/report_picture"
        android:paddingBottom="10dp"
        android:paddingTop="20dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="50"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <EditText
            android:id="@+id/summary_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:hint="@string/report_title"
            android:inputType="textCapSentences" />

        <LinearLayout
            android:id="@+id/summary_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_title"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/report_tags"
                android:src="@drawable/collections_labels" />

            <TextView
                android:id="@+id/summary_tags_chosen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/no_tags_chosen" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/summary_bottom_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#33B5E5"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/summary_button_bar"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/summary_bottom_border"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/summary_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/summary_done"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSaveReport"
                android:text="@string/done" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/summary_location"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_above="@id/summary_button_bar"
            android:layout_marginBottom="8dp"
            android:background="#000000"
            android:gravity="center"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/summary_progress_bar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/transparent"
                android:indeterminateOnly="true" />

            <TextView
                android:id="@+id/summary_location_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/searching_location"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>